Minor changes and readMeFile